--- a/AUTHORS
+++ b/AUTHORS
@@ -3,3 +3,4 @@
 # See hack/generate-authors.sh to make modifications.
 
 Achieng Masiga <sharonachiengmasiga@gmail.com>
+Njoroge Stanley Njoroge <nmurigi@kabarak.ac.ke>
